@@ -35,6 +35,7 @@ ctags-NEXT (Mon June 6 2007)
 * Fixed default access of unions to be public [C++, Bug #1548443].
 * Fixed various memory leaks, mostly contributed by Dmitry Antipov.
 * Fixed parsing of `define [Verilog, Bug #961001].
+* Fixed crashes involving '/' [Verilog, Bug #1743330].
 
 ctags-5.6 (Mon May 29 2006)
 * Reformatted code for independence of tab stop setting.
